# file-event-manager

./: .gitignore  main.py  pyproject.toml
src/path_event_to_task/: __init__.py  path_observer.py  path_task_manager.py
src/path_event_to_task/asynchronous/: event_handler.py  processor.py  validator.py
src/path_event_to_task/synchronous/: event_handler.py
tests/: conftest.py  test_event_handler.py  test_event_handler_async.py  test_path_observer.py  test_task_manager.py  test_validator.py
