[project]
name = "file-event-manager"
description = "A_short_description"

# If a project, then you can specify version here
version = "0.0.1"


readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {email = "matthew@davidson.engineering"},
  {name = "Matthew Davidson"}
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "config-loader",
    "prometheus-client>=0.21.1",
    "watchdog>=6.0.0",
]

[tool.uv]
package = true

[tool.uv.sources]
config-loader = { git = "https://github.com/davidson-engineering/python-config-loader.git" }

[tool.pytest.ini_options]
addopts = "--maxfail=1 -s"
console_output_style = "progress"
log_cli = false
log_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_file = "logs/pytest-logs.txt"
log_file_level = "DEBUG"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "typing-extensions>=4.12.2",
]


# [project.urls]
# homepage = "https://example.com"
# documentation = "https://readthedocs.org"
# repository = "https://github.com"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

# [project.scripts]
# spam-cli = "spam:main_cli"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"